tests/checker/bad/bad_adt_lib_5.scilla
scilla_version 0

import BadADTLib3a

(***************************************************)
(*               Associated library                *)
(***************************************************)
library BadLib

type TestType1 =
| MyItem


contract BadLib ()
